[tool.poetry]
name = "fwcracker"
version = "2.0.0"
description = "A simple password guesser for BIOS/Firmware password/locks."
authors = ["Omar Daniels Sr. <author@bookmotives.com>"]
readme = "../README.md"
packages = [{include = "fwcracker_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
